--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,24 @@
 .Rproj.user
 .Rhistory
-.RData
 **/*.pptx
 **/*.ppt
 **/*.DS_Store
+**/**/*.DS_Store
 **/*.xlsx
+**/*.xls
 **/*.pdf
 **/*.docx
+**/*.png
+**/*.doc
 *.docx
 *.Rproj
 *.csv
+**/*.zip
+**/*.rbd
+**/*.rdx
+FISH 558 Homeworks/HWK4/Results/**/*.**
+Fish 558 Workshop/Workshop Day 3/~$LectureE.ppt
+
+*.ppt
+
+.DS_Store
