stop tracking stupid things!!

--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,27 @@ Fish 558 Workshop/Workshop Day 3/~$LectureE.ppt
 *.ppt
 
 .DS_Store
+
+Fish 558 Homeworks/Homework 2/HWK2.doc
+
+Fish 558 Homeworks/HWK5/rsconnect/documents/HWK5.Rmd/shinyapps.io/danovando/HWK5.dcf
+
+Fish 558 Homeworks/HWK5/rsconnect/documents/HWK5.Rmd/shinyapps.io/danovando/HWK5_3.dcf
+
+*.dcf
+
+*.rdb
+
+*.html
+
+*.xls
+
+Fish 558 Homeworks/HWK4/mozzy_mcmc.Rdata
+
+Fish 558 Homeworks/HWK4/multi_chain_mcmc.Rdata
+
+Fish 558 Homeworks/HWK4/mozzy_mcmc.Rdata
+
+Fish 558 Homeworks/HWK5/HWK5_cache/html/run sims_479fd998d07cd98e7417f79afa9323dd.RData
+
+*.zip
