--- a/.gitignore
+++ b/.gitignore
@@ -46,3 +46,11 @@ Fish 558 Homeworks/HWK4/mozzy_mcmc.Rdata
 Fish 558 Homeworks/HWK5/HWK5_cache/html/run sims_479fd998d07cd98e7417f79afa9323dd.RData
 
 *.zip
+
+Fish 558 Homeworks/HWK4/Results/3.3/mozzy_mcmc.Rdata
+
+Fish 558 Homeworks/HWK4/Results/3.3/multi_chain_mcmc.Rdata
+
+Fish 558 Homeworks/HWK4/Results/3.3/reserve_mozzy_mcmc.Rdata
+
+*.history
